# SPDX-License-Identifier: GPL-3.0-or-later
blueprint_files = [
  'dialogs/beta-disallowed.blp',
  'dialogs/delete-style.blp',
  'dialogs/invalid-project.blp',
  'dialogs/legacy-migration-disallowed.blp',
  'dialogs/reset-import-settings.blp',
  'dialogs/save-project-changes.blp',
  'dialogs/save-style-changes.blp',
  'import/columns/box.blp',
  'import/columns/item-group.blp',
  'import/columns/main-group.blp',
  'import/spreadsheet/box.blp',
  'import/spreadsheet/main-group.blp',
  'import/spreadsheet/item-group.blp',
  'import/sql/main-group.blp',
  'import/dialog.blp',
  'import/file-row.blp',
  'sidebar/edit-item/base.blp',
  'sidebar/edit-item/data.blp',
  'sidebar/edit-item/equation.blp',
  'sidebar/edit-item/equation-group.blp',
  'sidebar/edit-item/errorbar-group.blp',
  'sidebar/edit-item/fill.blp',
  'sidebar/edit-item/generated-data.blp',
  'sidebar/edit-item/page.blp',
  'sidebar/figure-settings/settings-page.blp',
  'sidebar/figure-settings/style-page.blp',
  'sidebar/main.blp',
  'sidebar/operations.blp',
  'style-editor/add-style.blp',
  'style-editor/color-row.blp',
  'style-editor/editor-box.blp',
  'style-editor/item-color-row.blp',
  'style-editor/shortcuts.blp',
  'style-editor/window.blp',
  'add-equation.blp',
  'curve-fitting.blp',
  'export-figure.blp',
  'fitting-parameters.blp',
  'generate-data.blp',
  'item-box.blp',
  'smoothen-settings.blp',
  'style-preview.blp',
  'transform.blp',
  'window.blp',
  'window-shortcuts.blp',
]

blueprints = []
blueprint_compiler = find_program('blueprint-compiler')
foreach file : blueprint_files
  ui_file = file.replace('.blp', '.ui').replace('/', '_')
  blueprints += custom_target(ui_file,
      input: files(file),
     output: ui_file,
    command: [
      blueprint_compiler,
      'compile',
      '--output',
      '@OUTPUT@',
      '@INPUT@',
    ],
  )
endforeach