icondir = join_paths(moduledir, 'icons')

icon_sources = [
  'backwards-symbolic.svg',
  'backwards-dark-symbolic.svg',
  'change-xscale-symbolic.svg',
  'change-xscale-dark-symbolic.svg',
  'change-yscale-symbolic.svg',
  'change-yscale-dark-symbolic.svg',
  'forwards-symbolic.svg',
  'forwards-dark-symbolic.svg',
  'home-symbolic.svg',
  'home-dark-symbolic.svg',
  'move-symbolic.svg',
  'move-dark-symbolic.svg',
  'pip-symbolic.svg',
  'pip-dark-symbolic.svg',
  'plot-settings-symbolic.svg',
  'plot-settings-dark-symbolic.svg',
  'save-symbolic.svg',
  'save-dark-symbolic.svg',
  'zoom-symbolic.svg',
  'zoom-dark-symbolic.svg',
]

install_data(icon_sources, install_dir: icondir, install_mode: 'rwxrwxrwx')